Bug 301800 - detail view mode shows truncated header
Summary: detail view mode shows truncated header
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 2.0.95
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-13 09:27 UTC by Martin Koller
Modified: 2013-07-22 17:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments
screenshot (12.92 KB, image/png)
2012-06-13 09:28 UTC, Martin Koller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2012-06-13 09:27:19 UTC
In detail view mode the header does not use the full width of the view, which looks odd.
See attached screenshot.
The header should at least show an empty area with the same color of the rest of the header.

Reproducible: Always
Comment 1 Martin Koller 2012-06-13 09:28:13 UTC
Created attachment 71787 [details]
screenshot
Comment 2 Peter Penz 2012-06-13 09:31:34 UTC
This should have been fixed in master - does the issue also occur if you use Oxygen?
Comment 3 Martin Koller 2012-06-13 09:53:26 UTC
Oxygen works
Cleanlooks, QtCurve, Plastique dont
Comment 4 Peter Penz 2012-06-13 11:45:19 UTC
Thanks for the update!
Comment 5 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:22:22 UTC
Resetting assignee to default as per bug #305719
Comment 6 Martin Koller 2013-07-19 09:06:09 UTC
Just an update: This bug is still present in 4.11 RC1 (4.10.95)
Comment 7 Frank Reininghaus 2013-07-19 18:13:12 UTC
A patch is available at https://git.reviewboard.kde.org/r/111608/. Any testing is appreciated :-)
Comment 8 Frank Reininghaus 2013-07-22 17:11:02 UTC
Git commit 25f208ebe31247f44f87ac83485389eff035ce16 by Frank Reininghaus.
Committed on 22/07/2013 at 17:04.
Pushed by freininghaus into branch 'KDE/4.11'.

Fix "truncated header" in Details View with non-Oxygen styles

The code for painting the "empty header" was inconsistent with the
headers of the other columns, which is probably the reason why the other
styles got confused

a) No QStyleOptionHeader is used
b) Even if an empty header must be drawn, the last column is drawn with
   the option QStyleOptionHeader::End.

According to Christoph, it still doesn't work with the Skulpture style,
but it seems that the patch does at least not make things worse.
FIXED-IN: 4.11.0
REVIEW: 111608

M  +24   -8    dolphin/src/kitemviews/private/kitemlistheaderwidget.cpp

http://commits.kde.org/kde-baseapps/25f208ebe31247f44f87ac83485389eff035ce16